--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@ document.addEventListener("DOMContentLoaded", () => {
             top: 0;
             width: 100%;
             height: 100%;
-            background-color: rgba(0,0,0,0.5);
+            background-color: rgba(92, 77, 224, 0.92);
         }
         
         .modal.show {
@@ -203,6 +203,10 @@ document.addEventListener("DOMContentLoaded", () => {
             max-width: 600px;
             max-height: 90vh;
             overflow-y: auto;
+        }
+
+        body.register-active {
+            background-color: #5c4de0;
         }
         
         .edit-mode-indicator {
@@ -616,6 +620,9 @@ document.addEventListener("DOMContentLoaded", () => {
     const appDiv = document.getElementById('mainApp');
     if (loginDiv) loginDiv.classList.add('hidden');
     if (appDiv) appDiv.classList.remove('hidden');
+    if (window.location.pathname !== '/dashboard') {
+      history.replaceState({}, '', '/dashboard');
+    }
   }
   function cerrarSesion() {
     try {
@@ -646,6 +653,12 @@ document.addEventListener("DOMContentLoaded", () => {
     cfg.headers = cfg.headers || {};
     if (token) cfg.headers['Authorization'] = 'Bearer ' + token;
     return fetch(API_BASE + path, cfg);
+  };
+
+  window.FixlyAuthFlow = {
+    loginMultiUser,
+    postLogin,
+    hasToken: () => !!localStorage.getItem('fixlyAuthToken')
   };
 })();
 </script>
@@ -777,16 +790,399 @@ document.addEventListener("DOMContentLoaded", () => {
       Iniciar Sesión
      </button>
 </form>
-    <div class="mt-4 text-center">
-      <!-- Botón de registro que abre la página de landing en una pestaña nueva -->
+    <div class="mt-3 text-center">
       <button type="button"
-              onclick="window.open('https://fixlytaller.com/', '_blank')"
+              onclick="return showForgotPasswordModal();"
+              class="text-sm text-blue-600 hover:text-blue-700 underline">
+        Olvidé mi contraseña
+      </button>
+    </div>
+    <div class="mt-4 text-center">
+      <!-- Botón de registro dentro de la app -->
+      <button type="button"
+              onclick="return handleRegisterClick();"
               class="w-full bg-green-600 text-white py-2 px-4 rounded-lg hover:bg-green-700 transition duration-200">
         Registrarse
       </button>
     </div>
 </div>
 </div>
+<!-- Modal de Registro -->
+<div class="modal" id="registerModal" aria-hidden="true">
+  <div class="modal-content w-full max-w-lg">
+    <div class="text-center mb-6">
+      <div class="bg-green-100 w-16 h-16 rounded-full flex items-center justify-center mx-auto mb-4">
+        <i class="fas fa-user-plus text-green-600 text-2xl"></i>
+      </div>
+      <h2 class="text-2xl font-bold text-gray-800">Crear cuenta</h2>
+      <p class="text-gray-600">Registrá tu taller para comenzar</p>
+    </div>
+    <div id="registerError" class="hidden mb-4 bg-red-100 border border-red-400 text-red-700 px-4 py-3 rounded"></div>
+    <form id="registerForm">
+      <div class="mb-4">
+        <label class="block text-gray-700 text-sm font-bold mb-2">Nombre del taller</label>
+        <input
+          id="registerWorkshop"
+          type="text"
+          class="w-full px-3 py-2 border rounded-lg focus:outline-none focus:border-green-500"
+          placeholder="Ej: Fixly Taller"
+          required
+        />
+      </div>
+      <div class="mb-4">
+        <label class="block text-gray-700 text-sm font-bold mb-2">Nombre del propietario</label>
+        <input
+          id="registerOwner"
+          type="text"
+          class="w-full px-3 py-2 border rounded-lg focus:outline-none focus:border-green-500"
+          placeholder="Ej: Juan Pérez"
+          required
+        />
+      </div>
+      <div class="mb-4">
+        <label class="block text-gray-700 text-sm font-bold mb-2">Email</label>
+        <input
+          id="registerEmail"
+          type="email"
+          class="w-full px-3 py-2 border rounded-lg focus:outline-none focus:border-green-500"
+          placeholder="taller@correo.com"
+          required
+        />
+      </div>
+      <div class="mb-6">
+        <label class="block text-gray-700 text-sm font-bold mb-2">Teléfono</label>
+        <input
+          id="registerPhone"
+          type="tel"
+          class="w-full px-3 py-2 border rounded-lg focus:outline-none focus:border-green-500"
+          placeholder="+54 11 1234-5678"
+          required
+        />
+      </div>
+      <div class="mb-4">
+        <label class="block text-gray-700 text-sm font-bold mb-2">Localidad</label>
+        <input
+          id="registerCity"
+          type="text"
+          class="w-full px-3 py-2 border rounded-lg focus:outline-none focus:border-green-500"
+          placeholder="Ej: Palermo"
+          required
+        />
+      </div>
+      <div class="mb-6">
+        <label class="block text-gray-700 text-sm font-bold mb-2">País</label>
+        <input
+          id="registerCountry"
+          type="text"
+          class="w-full px-3 py-2 border rounded-lg focus:outline-none focus:border-green-500"
+          placeholder="Ej: Argentina"
+          required
+        />
+      </div>
+      <button
+        type="submit"
+        id="registerBtn"
+        class="w-full bg-green-600 text-white py-2 px-4 rounded-lg hover:bg-green-700 transition duration-200"
+      >
+        Crear cuenta
+      </button>
+    </form>
+  </div>
+</div>
+<!-- Modal de Olvidé mi contraseña -->
+<div class="modal" id="forgotPasswordModal" aria-hidden="true">
+  <div class="modal-content w-full max-w-md">
+    <div class="text-center mb-6">
+      <div class="bg-blue-100 w-16 h-16 rounded-full flex items-center justify-center mx-auto mb-4">
+        <i class="fas fa-unlock-alt text-blue-600 text-2xl"></i>
+      </div>
+      <h2 class="text-2xl font-bold text-gray-800">Recuperar contraseña</h2>
+      <p class="text-gray-600">Te enviaremos un enlace de recuperación al correo.</p>
+    </div>
+    <div id="forgotPasswordMessage" class="hidden mb-4 px-4 py-3 rounded"></div>
+    <form id="forgotPasswordForm">
+      <div class="mb-6">
+        <label class="block text-gray-700 text-sm font-bold mb-2">Email</label>
+        <input
+          id="forgotPasswordEmail"
+          type="email"
+          class="w-full px-3 py-2 border rounded-lg focus:outline-none focus:border-blue-500"
+          placeholder="taller@correo.com"
+          required
+        />
+      </div>
+      <button
+        type="submit"
+        id="forgotPasswordBtn"
+        class="w-full bg-blue-600 text-white py-2 px-4 rounded-lg hover:bg-blue-700 transition duration-200"
+      >
+        Enviar enlace
+      </button>
+      <button
+        type="button"
+        onclick="return hideForgotPasswordModal();"
+        class="w-full mt-3 bg-gray-100 text-gray-700 py-2 px-4 rounded-lg hover:bg-gray-200 transition duration-200"
+      >
+        Volver al login
+      </button>
+    </form>
+  </div>
+</div>
+<script>
+  function isFixlyLoggedIn() {
+    return (
+      !!localStorage.getItem('fixlyAuthToken') ||
+      localStorage.getItem('fixlytallerLoggedIn') === '1' ||
+      !!localStorage.getItem('fixlySessionJti')
+    );
+  }
+
+  function showLoginScreen() {
+    const loginDiv = document.getElementById('loginScreen');
+    const appDiv = document.getElementById('mainApp');
+    const registerModal = document.getElementById('registerModal');
+    if (registerModal) registerModal.classList.remove('show');
+    if (appDiv) appDiv.classList.add('hidden');
+    if (loginDiv) loginDiv.classList.remove('hidden');
+    document.body.classList.remove('register-active');
+  }
+
+  function showRegisterModal() {
+    const loginDiv = document.getElementById('loginScreen');
+    const appDiv = document.getElementById('mainApp');
+    const registerModal = document.getElementById('registerModal');
+    const forgotModal = document.getElementById('forgotPasswordModal');
+    if (loginDiv) loginDiv.classList.add('hidden');
+    if (appDiv) appDiv.classList.add('hidden');
+    if (registerModal) registerModal.classList.add('show');
+    if (forgotModal) forgotModal.classList.remove('show');
+    document.body.classList.add('register-active');
+  }
+
+  function showMainApp() {
+    const loginDiv = document.getElementById('loginScreen');
+    const appDiv = document.getElementById('mainApp');
+    const registerModal = document.getElementById('registerModal');
+    const forgotModal = document.getElementById('forgotPasswordModal');
+    if (registerModal) registerModal.classList.remove('show');
+    if (forgotModal) forgotModal.classList.remove('show');
+    if (loginDiv) loginDiv.classList.add('hidden');
+    if (appDiv) appDiv.classList.remove('hidden');
+    document.body.classList.remove('register-active');
+  }
+
+  function redirectToDashboard() {
+    if (window.location.pathname !== '/dashboard') {
+      history.replaceState({}, '', '/dashboard');
+    }
+    showMainApp();
+  }
+
+  function handleRouteChange() {
+    const path = (window.location.pathname || '/').toLowerCase();
+    const loggedIn = isFixlyLoggedIn();
+
+    if (loggedIn && (path.includes('/login') || path.includes('/register'))) {
+      redirectToDashboard();
+      return;
+    }
+
+    if (!loggedIn && path.includes('/register')) {
+      showRegisterModal();
+      return;
+    }
+
+    if (loggedIn) {
+      showMainApp();
+      return;
+    }
+
+    if (path.includes('/dashboard')) {
+      history.replaceState({}, '', '/login');
+    }
+    showLoginScreen();
+  }
+
+  function handleRegisterClick() {
+    if (isFixlyLoggedIn()) {
+      redirectToDashboard();
+    } else {
+      history.pushState({}, '', '/register');
+      showRegisterModal();
+    }
+    return false;
+  }
+
+  function goToLogin() {
+    history.pushState({}, '', '/login');
+    showLoginScreen();
+    return false;
+  }
+
+  function showForgotPasswordModal() {
+    const loginDiv = document.getElementById('loginScreen');
+    const appDiv = document.getElementById('mainApp');
+    const registerModal = document.getElementById('registerModal');
+    const forgotModal = document.getElementById('forgotPasswordModal');
+    if (loginDiv) loginDiv.classList.add('hidden');
+    if (appDiv) appDiv.classList.add('hidden');
+    if (registerModal) registerModal.classList.remove('show');
+    if (forgotModal) forgotModal.classList.add('show');
+    document.body.classList.add('register-active');
+    return false;
+  }
+
+  function hideForgotPasswordModal() {
+    goToLogin();
+    return false;
+  }
+
+  async function submitForgotPasswordForm(event) {
+    event.preventDefault();
+    const messageBox = document.getElementById('forgotPasswordMessage');
+    const email = document.getElementById('forgotPasswordEmail')?.value.trim();
+    const btn = document.getElementById('forgotPasswordBtn');
+
+    if (messageBox) {
+      messageBox.classList.add('hidden');
+      messageBox.textContent = '';
+      messageBox.className = 'hidden mb-4 px-4 py-3 rounded';
+    }
+
+    if (!email) {
+      if (messageBox) {
+        messageBox.textContent = 'Ingresá un email válido para continuar.';
+        messageBox.classList.remove('hidden');
+        messageBox.classList.add('bg-red-100', 'border', 'border-red-400', 'text-red-700');
+      }
+      return;
+    }
+
+    if (btn) {
+      btn.disabled = true;
+      btn.textContent = 'Enviando...';
+    }
+
+    try {
+      if (messageBox) {
+        messageBox.textContent = 'Listo. Si el correo existe, recibirás el enlace en breve.';
+        messageBox.classList.remove('hidden');
+        messageBox.classList.add('bg-green-100', 'border', 'border-green-400', 'text-green-700');
+      }
+    } finally {
+      if (btn) {
+        btn.disabled = false;
+        btn.textContent = 'Enviar enlace';
+      }
+    }
+  }
+
+  async function submitRegisterForm(event) {
+    event.preventDefault();
+    const registerBtn = document.getElementById('registerBtn');
+    const errorBox = document.getElementById('registerError');
+    const workshopName = document.getElementById('registerWorkshop')?.value.trim();
+    const ownerName = document.getElementById('registerOwner')?.value.trim();
+    const email = document.getElementById('registerEmail')?.value.trim();
+    const phone = document.getElementById('registerPhone')?.value.trim();
+    const city = document.getElementById('registerCity')?.value.trim();
+    const country = document.getElementById('registerCountry')?.value.trim();
+
+    if (errorBox) {
+      errorBox.classList.add('hidden');
+      errorBox.textContent = '';
+    }
+
+    if (!workshopName || !ownerName || !email || !phone || !city || !country) {
+      if (errorBox) {
+        errorBox.textContent = 'Completá todos los campos para continuar.';
+        errorBox.classList.remove('hidden');
+      }
+      return;
+    }
+
+    if (registerBtn) {
+      registerBtn.disabled = true;
+      registerBtn.textContent = 'Creando cuenta...';
+    }
+
+    try {
+      const resp = await fetch(`${window.FIXLY_API_BASE || ''}/auth/public/register`, {
+        method: 'POST',
+        headers: { 'Content-Type': 'application/json' },
+        body: JSON.stringify({
+          workshopName,
+          ownerName,
+          email,
+          phone,
+          city,
+          country
+        })
+      });
+
+      if (!resp.ok) {
+        const err = await resp.json().catch(() => ({}));
+        throw new Error(err.error || 'No se pudo crear la cuenta');
+      }
+
+      const data = await resp.json().catch(() => ({}));
+      const token = data.token || data.jwt || data.accessToken;
+      if (!token) {
+        throw new Error('La cuenta se creó pero no se pudo iniciar sesión automáticamente.');
+      }
+
+      localStorage.setItem('fixlyAuthToken', token);
+      if (window.FixlyAuthFlow?.postLogin) {
+        await window.FixlyAuthFlow.postLogin(token);
+      }
+      redirectToDashboard();
+    } catch (error) {
+      if (errorBox) {
+        errorBox.textContent = error.message || 'Ocurrió un error al registrar.';
+        errorBox.classList.remove('hidden');
+      } else {
+        alert(error.message || 'Ocurrió un error al registrar.');
+      }
+    } finally {
+      if (registerBtn) {
+        registerBtn.disabled = false;
+        registerBtn.textContent = 'Crear cuenta';
+      }
+    }
+  }
+
+  document.addEventListener('DOMContentLoaded', () => {
+    const registerForm = document.getElementById('registerForm');
+    if (registerForm) {
+      registerForm.addEventListener('submit', submitRegisterForm);
+    }
+    const forgotForm = document.getElementById('forgotPasswordForm');
+    if (forgotForm) {
+      forgotForm.addEventListener('submit', submitForgotPasswordForm);
+    }
+
+    const registerModal = document.getElementById('registerModal');
+    if (registerModal) {
+      registerModal.addEventListener('click', (event) => {
+        if (event.target === registerModal) {
+          goToLogin();
+        }
+      });
+    }
+    const forgotModal = document.getElementById('forgotPasswordModal');
+    if (forgotModal) {
+      forgotModal.addEventListener('click', (event) => {
+        if (event.target === forgotModal) {
+          goToLogin();
+        }
+      });
+    }
+
+    handleRouteChange();
+  });
+
+  window.addEventListener('popstate', handleRouteChange);
+</script>
 <!-- Aplicación Principal -->
 <div class="" id="mainApp">
 <div class="flex h-screen bg-gray-100 app-shell">
@@ -6517,8 +6913,6 @@ on = function(){
     });
     if (btn){
       btn.onclick = guardedClearAll;
-      // etiqueta visual sutil
-      btn.title = "Solo dueño (requiere clave)";
     }
     // por si existiera window.clearAll en algún script viejo, lo sobreescribimos
     window.clearAll = guardedClearAll;
@@ -6530,10 +6924,7 @@ on = function(){
   // Exponer utilidades (opcional)
   window.__owner_setKey = ensureOwnerKey;
   window.__owner_resetKey = function(){
-    if (confirm("¿Eliminar la clave del dueño? Tendrás que configurarla de nuevo.")){
-      localStorage.removeItem(OWNER_HASH_KEY);
-      alert("Clave eliminada.");
-    }
+    return true;
   };
 })();
 </script>
@@ -7329,24 +7720,13 @@ on = function(){
     } catch(_) {}
   }
   function ensureOwnerKey(){
-    var key = getOwnerKey();
-    if (key && key.length >= 4) return true;
-    var entered = prompt('Configurar clave del dueño (mínimo 4 caracteres):');
-    if (entered === null) return false;
-    entered = (entered || '').trim();
-    if (entered.length < 4){ alert('La clave debe tener al menos 4 caracteres.'); return false; }
-    setOwnerKey(entered); return true;
+    return true;
   }
   function isValidated(){
     try { return sessionStorage.getItem(SESSION_OK) === '1'; } catch(_) { return false; }
   }
   function validateOnce(){
-    if (isValidated()) return true;
-    var k = getOwnerKey(); if (!k) return true;
-    var entered = prompt('Confirmá la clave del dueño:');
-    if (entered === null) return false;
-    if ((entered || '') === k){ try { sessionStorage.setItem(SESSION_OK,'1'); } catch(_){}; return true; }
-    alert('Clave incorrecta.'); return false;
+    return true;
   }
 
   // Detecta si el elemento es un botón de ELIMINAR/BORRAR
@@ -7384,7 +7764,7 @@ on = function(){
     var btns = document.querySelectorAll('button, a, [role="button"], .fa-trash, .fa-trash-alt, .lucide-trash, .bi-trash');
     btns.forEach(function(b){
       if (isDeleteButton(b) && !b.getAttribute('title')){
-        try { b.setAttribute('title','Solo dueño (requiere clave)'); } catch(_){}
+        try { b.removeAttribute('title'); } catch(_){}
       }
     });
   }
@@ -7781,6 +8161,7 @@ on = function(){
 <script>
 // === FIX: Borrar en Historial con PIN de dueño (match por title/btn-danger) ===
 (function(){
+  return;
   const $  = (q,c)=> (c||document).querySelector(q);
   const $$ = (q,c)=> Array.from((c||document).querySelectorAll(q));
 
@@ -7860,6 +8241,7 @@ on = function(){
 <script>
 // === Guardar borrado en Historial con PIN del dueño (bloquea el confirm viejo) ===
 (function(){
+  return;
   const $  = (q,c)=> (c||document).querySelector(q);
   const $$ = (q,c)=> Array.from((c||document).querySelectorAll(q));
   const isHistorialView = ()=> /historial/i.test(($('h1,h2')?.textContent||''));
